Correction du mauvais collapse qui faisait passer le minidashboard par dessus la barre de menu

--- a/src/client/app/site/siteTemplate/blog.css
+++ b/src/client/app/site/siteTemplate/blog.css
@@ -32,6 +32,21 @@ h6, .h6 {
 }
 
 
+@media (min-width: 768px) and (max-width: 1200px) {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
+
 /*
  * Masthead for nav
  */
@@ -114,6 +129,7 @@ h6, .h6 {
 
 .blog-nav .drop{
     color: #cdddeb;
+    z-index: 9999;
 }
 
 .headerPic{
